data/issues_nolabel/nolabel_test_2333.txt
Building from source fail, error in tensorflow/core/lib/core/threadpool.cc

Hi,
I try to build tensorflow from source, but I get the ERROR as following:
ERROR: /WORK/sysu_sc_ll/tf-rh/tensorflow-/tensorflow/core/BUILD:766:1: C++ compilation of rule '//tensorflow/core:lib_internal' failed: gcc failed: error executing command /HOME/sysu_sc_ll/WORKSPACE/tf-rh/bazel-/hackbin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wl,-z,-relro,-z,now -B/HOME/sysu_sc_ll/WORKSPACE/tf-rh/bazel-/hackbin -B/usr/bin ... (remaining 78 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/core/lib/core/threadpool.cc:82:49: error: expected template-name before '<' token
 struct ThreadPool::Impl : Eigen::ThreadPoolTempl<EigenEnvironment> {
                                                 ^
tensorflow/core/lib/core/threadpool.cc:82:49: error: expected '{' before '<' token
tensorflow/core/lib/core/threadpool.cc:82:49: error: expected unqualified-id before '<' token
tensorflow/core/lib/core/threadpool.cc:220:1: error: expected '}' at end of input
 }  // namespace tensorflow
 ^
tensorflow/core/lib/core/threadpool.cc:220:1: error: expected '}' at end of input
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 12.663s, Critical Path: 10.84s


OS:  redhat 6.7
gcc: 4.9.2
building with cuda
run command:
export EXTRA_BAZEL_ARGS='-s --verbose_failures --ignore_unsupported_sandboxing --genrule_strategy=standalone --spawn_strategy=standalone --jobs 8'
bazel build -c opt //tensorflow/tools/pip_package:build_pip_package
I did not change any source file,
And previously, the is another error in the source tensorflow/core/lib/io/record_reader.cc
which claim that the SIZE_MAX is not defined, I solve it by define it as size_t -1. And now this error show up.
Could anyone give me some help here? Thanks.